# coinbin.org

./: .dockerignore  .gitignore  Dockerfile  Pipfile  Procfile  README.md  app.json  graph.py  ingest.py  mcp_server.py  predictions.py  pyproject.toml  requirements.txt  schema.sql  scraper.py  server.py  wallets.py
static/: tufte.css
templates/: index.html
